# laika

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  __init__.py  car_kf.py  cors_station_positions  laika_quality_check.html  live_kf.py  mypy.ini  pyproject.toml  requirements.txt  requirements_examples.txt  run_docker.sh  run_filter.py  setup.py  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yml
data/live_gnss_ublox/: value
data/raw_gnss_ublox/: value
example_data/raw_gnss_ublox/: t
examples/: Compute_station_pos.ipynb  Kalman.ipynb  Walkthrough.ipynb  example_data  kalman_example_data  laika_quality_check.html
examples/kalman/: ekf_sym.py  ffi_wrapper.py  gnss_kf.py  kalman_helpers.py  (+1 more)
gnss/: astro_dog.py  dcb.py  dgps.py  ephemeris.py  gps_time.py  helpers.py  iono.py  raw_gnss.py  rinex_file.py  trop.py
kalman/: ekf_sym.py  ffi_wrapper.py  gnss_kf.py  kalman_helpers.py  sympy_helpers.py
kalman.old/: SConscript  car_kf.py  ekf_sym.py  gnss_kf.py  loc_kf.py  lst_sq_computer.py
laika/: .netrc  .pre-commit-config.yaml  __init__.py  astro_dog.py  constants.py  dcb.py  dgps.py  downloader.py  ephemeris.capnp  ephemeris.py  gps_time.py  helpers.py  iono.py  iono_refactors.py  opt.py  orientation.py  raw_gnss.py  rinex_file.py  trop.py  unlzw.py
tests/: test_dop.py  test_downloader.py  test_ephemerides.py  test_fail_caching.py  test_fetch_sat_info.py  test_parse_orbits.py  test_positioning.py  test_prediction_orbits.py  test_prns.py  test_time.py  test_time_range_holder.py
(+26 files in other folders)
