[project]
name='laika'
version='0.0.1'
description="GNSS library for use with the comma.ai ecosystem"
authors = [{name='comma.ai', email='harald@comma.ai'}]
requires-python = '>= 3.8'
license = {text = "MIT License"}
dependencies = [
  'numpy',
  'certifi',
  'requests',
  'scipy',
  'pycurl',
  'tqdm',
  'hatanaka',
  'pycapnp',
]

[project.urls]
Homepage = 'https://github.com/commaai/laika'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "." ]

# package_data={'': ['*.capnp']}, -> hatchling
# classifiers=[
#   'Development Status :: 2 - Beta',
#   "Natural Language :: English",
#   "Programming Language :: Python :: 3",
#   "Topic :: System :: Hardware",
# ],
# tests_require=['pytest', 'parameterized'],

# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 160
target-version="py311"

[tool.ruff.lint]
select = ["E", "F", "W", "PIE", "C4", "ISC", "RUF100", "A"]
ignore = ["W292", "E741", "E402", "C408", "ISC003"]
flake8-implicit-str-concat.allow-multiline=false
